# Medcalc

./: main.py  pyproject.toml
static/: styles.css
templates/: index.html
